Bug 1663424 - fix pgo file writing from non-webcontent child processes in PROFILE_GENERATE runs, r=dmajor

Differential Revision: https://phabricator.services.mozilla.com/D89467